# MarketSim

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  analyze.py  setup.py  vcpkg-configuration.json  vcpkg.json
MarketSim/: CMakeLists.txt  LOGGING_IMPLEMENTATION.md  MarketSim.cpp  MarketSim.h  test_matching_engine.cpp
MarketSim/notes/: HAWKES_MODEL_IMPLEMENTATION.md  IOHANDLER_IMPLEMENTATION_SUMMARY.md  LOGGING_GUIDE.md  MONITOR_IMPLEMENTATION_SUMMARY.md  OHLCV_IMPLEMENTATION.md  PRICE_MODEL_ARCHITECTURE.md  STATUS_MONITOR_INTEGRATION.md  THREAD_ARCHITECTURE_FIX.md
MarketSim/src/common/: README.md
MarketSim/src/common/math/: README.md  brownian_motion.h  distribution.h  distributions.cpp  distributions.h  monte_carlo.h  random.h
MarketSim/src/exchange/: README.md
MarketSim/src/exchange/config/: exchange_config.h
MarketSim/src/exchange/configs/: README.md
MarketSim/src/exchange/data/: price_history.h
MarketSim/src/exchange/handler/: README.md
MarketSim/src/exchange/main/: README.md  exchange_service.cpp  exchange_service.h
MarketSim/src/exchange/mappers/: README.md
MarketSim/src/exchange/models/: README.md  market_stats_model.h  order_model.h  orderbook_model.cpp  orderbook_model.h  price_cache.h
MarketSim/src/exchange/operations/: MATCHING_ENGINE_FINAL_STATUS.md  README.md  matching_engine.cpp  matching_engine.h  order_book.cpp  order_book.h
MarketSim/src/exchange/repository/: README.md
MarketSim/src/exchange/threads/: README.md
MarketSim/src/exchange/utils/: README.md  thread_safe_queue.h  time_utils.h
MarketSim/src/io_handler/: README.md  io_context.cpp  io_context.h  message_serializer.cpp  message_serializer.h  ohlcv_builder.cpp  ohlcv_builder.h  zmq_publisher.cpp  zmq_publisher.h  zmq_replier.cpp  zmq_replier.h  zmq_requester.cpp  zmq_requester.h  zmq_subscriber.cpp  zmq_subscriber.h
MarketSim/src/monitor/: README.md  exchange_logger.cpp  exchange_logger.h  exchange_monitor.cpp  exchange_monitor.h  history_recorder.cpp  history_recorder.h  monitor_config.h  monitor_helpers.h  socket_info.h  status_monitor.cpp  status_monitor.h  thread_info.h
MarketSim/src/trader/: README.md  __init__.py
MarketSim/src/trader/analyze/: README.md  __init__.py  candlestick_plotter.py  cleanup.ps1  example.py  main.py  ohlcv_reader.py  quickstart.py  requirements.txt  run_example.py
MarketSim/src/traffic_generator/: CMakeLists.txt  README.md
MarketSim/src/traffic_generator/configs/: README.md
MarketSim/src/traffic_generator/handlers/: README.md
MarketSim/src/traffic_generator/main/: README.md  traffic_generator_main.cpp  traffic_generator_main.h
MarketSim/src/traffic_generator/models/: README.md  generation_parameters.h
MarketSim/src/traffic_generator/models/price_models/: gbm_price_model.cpp  gbm_price_model.h  hawkes_microstructure_model.cpp  hawkes_microstructure_model.h  i_price_model.h  linear_price_model.cpp  linear_price_model.h  price_model_factory.cpp  price_model_factory.h
MarketSim/src/traffic_generator/operations/: README.md  gbm_price_generator.cpp  gbm_price_generator.h  order_flow_generator.cpp  order_flow_generator.h  price_movement_calculator.cpp  price_movement_calculator.h
MarketSim/src/traffic_generator/threads/: README.md  generation_thread.cpp  generation_thread.h  order_submission_thread.cpp  order_submission_thread.h  price_generation_thread.cpp  price_generation_thread.h
MarketSim/src/traffic_generator/utils/: README.md  time_utils.cpp  time_utils.h
MarketSim/test/: manual_order_client.cpp  monitor_exchange.cpp  test_exchange_server.cpp  test_exchange_server_debug.cpp  test_gbm_generator.cpp  test_io_handler.cpp  test_logging.cpp  test_matching_engine.cpp  test_status_monitor.cpp  test_traffic_generator.cpp  test_traffic_generator_unified.cpp
proto/src/common/: exchange.proto
src/exchange/models/: orderbook_level_model.cpp  orderbook_level_model.h  price_cache.cpp  trade_model.h
src/exchange/utils/: logging_utils.cpp  logging_utils.h  time_utils.cpp
trader/: README.md
trader/analyze/: GUIDE.md  README.md  TRADER_SETUP_GUIDE.md  TROUBLESHOOTING.md  example.py  main.py  ohlcv_reader.py  run_analysis.py  test_setup.py
